# aurora-toolbox

./: .gitignore  404.html  CHANGELOG.md  README.md  com.keygenqt.aurora-toolbox.yml  index.html  meson.build  mkdocs.yml  sitemap.xml
.changeln/: changeln.mako
assets/: 404.html
config/: index.html
css/: common.css
data/: com.keygenqt.aurora-toolbox.data.gresource.xml  com.keygenqt.aurora-toolbox.gschema.xml  meson.build
data/css/: style.css
data/ui/: AboutDialog.ui  SettingsDialog.ui  WelcomeWidget.ui  Window.ui
data/ui/dialogs/: AboutDialog.ui  AlertDialog.ui  ErrorDialog.ui  InfoDialog.ui  LoadingDialog.ui  PasswordDialog.ui  SettingsDialog.ui  TextDialog.ui
data/ui/pages/device/: DevicePage.ui
data/ui/pages/devices/: DevicesPage.ui
data/ui/pages/devices/elements/: DevicesGroups.ui
data/ui/pages/emulator/: EmulatorPage.ui
data/ui/pages/flutter/: FlutterPage.ui
data/ui/pages/psdk/: PsdkPage.ui
data/ui/pages/psdkTarget/: PsdkTargetPage.ui
data/ui/pages/psdks/: PsdksPage.ui
data/ui/pages/sdk/: SdkPage.ui
data/ui/pages/tools/: ToolsPage.ui
data/ui/pages/tools/elements/: ToolsGroups.ui  ToolsMenu.ui
data/ui/pages/vscode/: VscodePage.ui
data/ui/pages/welcome/: WelcomePage.ui
data/ui/pages/welcome/elements/: WelcomeConnect.ui  WelcomeLoading.ui  WelcomeNotFound.ui  WelcomeUpdate.ui
data/ui/widgets/: DeviceInfoBoxWidget.ui  GroupBoxWidget.ui  IconInfoBoxWidget.ui  InfoBoxWidget.ui  MenuToolsWidget.ui  NavigationWidget.ui  PageBoxWidget.ui  SettingsMenuWidget.ui  WelcomeWidget.ui
docs/: install.md  tools.md  videos.md
install/: index.html
po/: POTFILES  com.keygenqt.aurora-toolbox.pot  ru.po
rpm/: README.md  aurora-toolbox.spec
scripts/: build_flatpak.sh  clear.sh  deb.sh  i18n.sh  rpm.sh  run.sh  run_ru.sh
search/: search_index.json
src/: Application.js  WelcomeWidget.js  Window.js  com.keygenqt.aurora-toolbox.js  com.keygenqt.aurora-toolbox.src.gresource.xml  (+1 more)
(+65 files in other folders)
